Initial implementation of Gentoo Install Guide is finished

--- a/make.conf
+++ b/make.conf
@@ -8,10 +8,11 @@ MAKEOPTS="-j4 -l4"
 EMERGE_DEFAULT_OPTS="--jobs 1 --load-average 4"
 
 ACCEPT_LICENSE="* -@EULA"
+GRUB_PLATFORMS="efi-64"
 
 LINGUAS="en en_US"
 L10N="en en-US"
 
 VIDEO_CARDS="amdgpu radeonsi"
 
-USE=""
+USE="bash-completion"
